--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <link rel="stylesheet" href="style.css">
+
+        <!-- fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
+
     </head>
 
     <body>
@@ -28,7 +32,7 @@
         <!-- Introduction -->
         <section class="intro" id="about">
             <h1 class="section-title">Hello, I'm <strong>Joseph Heyes</strong></h1>
-            <p class="section-para">
+            <p class="section-subtitle  section-subtitle_intro">
                 I am a student at the University of Nottingham, studying BSc Computer Science. This website acts as a place where you can easily view and access my projects and repos.
             </p>
         </section>
@@ -36,7 +40,7 @@
         <!-- Projects -->
         <section class="projects" id="projects">
             <h2 class="section-title">My Projects</h2>
-            <p class="section-para"><strong>Under Construction</strong></p>
+            <p class="section-subtitle"><strong>Under Construction</strong></p>
         </section>
 
         <footer>
