--- a/index.html
+++ b/index.html
@@ -16,16 +16,29 @@
 
     <body>
         <header>
-            <button class="nav-toggle">
-                <span class="hamburger"></span>
-            </button>
+            <nav class="navbar">
+                <a href="#" class="nav-branding">Dev</a>
 
-            <nav class="nav">
-                <ul class="nav-list">
-                    <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">About me</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">My Projects</a></li>
+                <ul class="nav-menu">
+                    <li>
+                        <a href="#" class="nav-link">Home</a>
+
+                    </li>
+                    <li>
+                        <a href="#" class="nav-link">Projects</a>
+                        
+                    </li>
+                    <li>
+                        <a href="#" class="nav-link">Contact/a>
+                        
+                    </li>
                 </ul>
+
+                <div class="hamburger">#
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
             </nav>
         </header>
 
