--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </li>
                 </ul>
 
-                <div class="hamburger">#
+                <div class="hamburger">
                     <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
