--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
                     </li>
                     <li>
-                        <a href="#" class="nav-link">Projects</a>
+                        <a href="#" class="nav-link">About</a>
                         
                     </li>
                     <li>
-                        <a href="#" class="nav-link">Contact/a>
+                        <a href="#" class="nav-link">Projects</a>
                         
                     </li>
                 </ul>
