re do header and add footer style

--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
 
     <body>
         <header>
+            <button class="nav-toggle">
+                <span class="hamburger"></span>
+            </button>
             
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#about" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+                    <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+                </ul>
+            </nav>
         </header>
 
         <!-- Introduction -->
@@ -33,12 +43,13 @@
             <p class="section-subtitle"><strong>Under Construction</strong></p>
         </section>
 
-        <footer>
+        <footer id="contact">
             <a href="mailto:josephheyes@gmail.com" class="footer-link">josephheyes@gmail.com</a>
             <ul class="social-list">
-                <li class="social-item"><a class="social link" href="https://github.com/josephheyes">github</a></li>
-                <li class="social-item"><a class="social link" href="https://twitter.com">twitter</a></li>
+                <li class="social-item"><a class="social link" href="https://github.com/josephheyes"><i class="fa-brands fa-github"></i>></a></li>
+                <li class="social-item"><a class="social link" href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a></li>
             </ul>
         </footer>
+
     </body>
 </html>
