--- a/index.html
+++ b/index.html
@@ -37,6 +37,23 @@
             </p>
         </section>
 
+        <!-- Technical Skills-->
+        <section class="skills" id="skills">
+            <h2 class="section-title">Technical Skills</h2>
+            <p>Languages and Frameworks (in order of competence):</p>
+            <ul class="skills-list">
+                <li class="skills-item">Python</li>
+                <li class="skills-item">C</li>
+                <li class="skills-item">Java (including JUnit)</li>
+                <li class="skills-item">HTML/CSS/JavaScript</li>
+            </ul>
+            <p>Other skills</p>
+            <ul class="skills-list">
+                <li class="skills-item">Git</li>
+                <li class="skills-item">Linux (used Ubuntu as daily driver for 1st year of university, and will be continuing to do so in 2nd year)</li>
+            </ul>
+        </section>
+
         <!-- Projects -->
         <section class="projects" id="projects">
             <h2 class="section-title">My Projects</h2>
