correct tags and class for skills section subtitles

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         <!-- Technical Skills-->
         <section class="skills" id="skills">
             <h2 class="section-title">Technical Skills</h2>
-            <h3>Languages and Frameworks (in order of competence):</h3>
+            <p class="section-subtitle">Languages and Frameworks (in order of competence):</p>
             <ul class="skills-list">
                 <li class="skills-item">Python</li>
                 <li class="skills-item">C</li>
                 <li class="skills-item">Java (including JUnit)</li>
                 <li class="skills-item">HTML/CSS/JavaScript</li>
             </ul>
-            <h3>Other skills</h3>
+            <p class="section-subtitle">Other skills</p>
             <ul class="skills-list">
                 <li class="skills-item">Git</li>
                 <li class="skills-item">Linux (used Ubuntu as daily driver for 1st year of university, and will be continuing to do so in 2nd year)</li>
