--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- Introduction -->
         <section class="intro" id="about">
             <h1 class="section-title">Hello, I'm <strong>Joseph Heyes</strong></h1>
-            <p class="section-subtitle  section-subtitle_intro">
+            <p class="section-subtitle  section-subtitle_accented">
                 I am a student at the University of Nottingham, studying BSc Computer Science. This website acts as a place where you can easily view and access my projects and repos.
             </p>
         </section>
@@ -40,14 +40,14 @@
         <!-- Technical Skills-->
         <section class="skills" id="skills">
             <h2 class="section-title">Technical Skills</h2>
-            <p class="section-subtitle">Languages and Frameworks (in order of competence):</p>
+            <p class="section-subtitle section-subtitle_accented">Languages and Frameworks (in order of competence):</p>
             <ul class="skills-list">
                 <li class="skills-item">Python</li>
                 <li class="skills-item">C</li>
                 <li class="skills-item">Java (including JUnit)</li>
                 <li class="skills-item">HTML/CSS/JavaScript</li>
             </ul>
-            <p class="section-subtitle">Other skills</p>
+            <p class="section-subtitle section-subtitle_accented">Other skills</p>
             <ul class="skills-list">
                 <li class="skills-item">Git</li>
                 <li class="skills-item">Linux (used Ubuntu as daily driver for 1st year of university, and will be continuing to do so in 2nd year)</li>
