update skills section content

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <li class="skills-item">C</li>
                 <li class="skills-item">Java (including JUnit)</li>
                 <li class="skills-item">HTML/CSS/JavaScript</li>
+                <li class="skills-item">SQL</li>
             </ul>
             <p class="section-subtitle">Other skills</p>
             <ul class="skills-list">
