--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         <section class="intro" id="about">
             <h1 class="section-title">Hello, I'm <strong>Joseph Heyes</strong></h1>
             <p class="section-subtitle  section-subtitle_accented">
-                I am a student at the University of Nottingham, studying BSc Computer Science. This website acts as a place where you can easily view and access my projects and repos.
+                I am a student at the University of Nottingham, studying BSc Computer Science. This website acts as a place where you can easily view my project portfolio and GitHub repositories.
             </p>
         </section>
 
         <!-- Technical Skills-->
         <section class="skills" id="skills">
             <h2 class="section-title">Technical Skills</h2>
-            <p class="section-subtitle">Languages and Frameworks (in order of competence):</p>
+            <p class="section-subtitle">Languages and Frameworks:</p>
             <ul class="skills-list">
+                <li class="skills-item">Java (Including JUnit)</li>
                 <li class="skills-item">Python</li>
                 <li class="skills-item">C</li>
-                <li class="skills-item">Java (including JUnit)</li>
                 <li class="skills-item">HTML/CSS/JavaScript</li>
                 <li class="skills-item">SQL</li>
             </ul>
@@ -45,13 +45,13 @@
         <!-- Projects -->
         <section class="projects" id="projects">
             <h2 class="section-title">My Projects</h2>
-            <p class="section-subtitle"><strong>Under Construction</strong></p>
+            <p class="section-subtitle">If you're interested, <a href="https://github.com/josephheyes/leetcode-solutions" class="social-link">here</a>is where I store my solutions to various LeetCode problems</p>
         </section>
 
         <footer id="contact">
-            <a href="mailto:josephheyes@gmail.com" class="footer-link">josephheyes@gmail.com</a>
+            <a href="mailto:josephheyes@gmail.com" class="social-link">josephheyes@gmail.com</a>
             <ul class="social-list">
-                <li class="social-item"><a class="social link" href="https://github.com/josephheyes"><i class="fa-brands fa-github"></i></a></li>
+                <li class="social-item"><a href="https://github.com/josephheyes"><i class="fa-brands fa-github"></i></a></li>
             </ul>
         </footer>
         
