update colour and spacing

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <!-- Introduction -->
         <section class="intro" id="about">
-            <h1 class="section-title">Hello, I'm <strong>Joseph Heyes</strong></h1>
+            <h1 class="section-title"><strong>Joseph Heyes</strong></h1>
             <p class="section-subtitle  section-subtitle_accented">
                 I am a student at the University of Nottingham, studying BSc Computer Science. This website acts as a place where you can easily view my project portfolio and GitHub repositories.
             </p>
@@ -45,7 +45,7 @@
         <!-- Projects -->
         <section class="projects" id="projects">
             <h2 class="section-title">My Projects</h2>
-            <p class="section-subtitle">If you're interested, <a href="https://github.com/josephheyes/leetcode-solutions" class="social-link">here</a>is where I store my solutions to various LeetCode problems</p>
+            <p class="section-subtitle">If you're interested, <a class="repo-link" href="https://github.com/josephheyes/leetcode-solutions" class="social-link">here</a> is where I store my solutions to various LeetCode problems</p>
         </section>
 
         <footer id="contact">
