--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <link rel="stylesheet" href="style.css">
+        <script defer src="app.js"></script> 
 
         <!-- fonts -->
         <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
@@ -15,6 +16,14 @@
     </head>
 
     <body>
+
+        <div class="navbar">
+            <a class="navlink" href="#about">About Me</a>
+            <a class="navlink" href="#skills">Technical Skills</a>
+            <a class="navlink" href="#projects">My projects</a>
+        </div>
+
+        <div class="content">
 
         <!-- Introduction -->
         <section class="intro" id="about">
@@ -24,29 +33,32 @@
             </p>
         </section>
 
+        
         <!-- Technical Skills-->
-        <section class="skills" id="skills">
+        <section class="skills hidden" id="skills">
             <h2 class="section-title">Technical Skills</h2>
             <p class="section-subtitle">Languages and Frameworks:</p>
             <ul class="skills-list">
-                <li class="skills-item">Java (Including JUnit)</li>
-                <li class="skills-item">Python</li>
-                <li class="skills-item">C</li>
-                <li class="skills-item">HTML/CSS/JavaScript</li>
-                <li class="skills-item">SQL</li>
+                <li class="skills-item hidden">Java (Including JUnit)</li>
+                <li class="skills-item hidden">Python</li>
+                <li class="skills-item hidden">C</li>
+                <li class="skills-item hidden">HTML/CSS/JavaScript</li>
+                <li class="skills-item hidden">SQL</li>
             </ul>
-            <p class="section-subtitle">Other skills</p>
+            <p class="section-subtitle">Other skills:</p>
             <ul class="skills-list">
-                <li class="skills-item">Git</li>
-                <li class="skills-item">Linux (used Ubuntu as daily driver for 1st year of university, and will be continuing to do so in 2nd year)</li>
+                <li class="skills-item hidden">Git</li>
+                <li class="skills-item hidden">Linux</li>
             </ul>
         </section>
 
         <!-- Projects -->
-        <section class="projects" id="projects">
+        <section class="projects hidden" id="projects">
             <h2 class="section-title">My Projects</h2>
             <p class="section-subtitle">If you're interested, <a class="repo-link" href="https://github.com/josephheyes/leetcode-solutions" class="social-link">here</a> is where I store my solutions to various LeetCode problems</p>
         </section>
+
+        </div>
 
         <footer id="contact">
             <a href="mailto:josephheyes@gmail.com" class="social-link">josephheyes@gmail.com</a>
