--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <body>
 
         <div class="navbar">
+            <a class="navlink cv" href="CV-Joseph-Heyes.pdf">View my CV</a>
             <a class="navlink" href="#about">About Me</a>
             <a class="navlink" href="#skills">Technical Skills</a>
             <a class="navlink" href="#projects">My projects</a>
@@ -26,8 +27,8 @@
         <div class="content">
 
         <!-- Introduction -->
-        <section class="intro" id="about">
-            <h1 class="section-title"><strong>Joseph Heyes</strong></h1>
+        <section class="intro hidden" id="about">
+            <h1 class="section-title">Hello, I'm<strong>&lt Joseph Heyes &gt</strong></h1>
             <p class="section-subtitle  section-subtitle_accented">
                 I am a student at the University of Nottingham, studying BSc Computer Science. This website acts as a place where you can easily view my project portfolio and GitHub repositories.
             </p>
