update media query for technical skills

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
             <h2 class="section-title">Technical Skills</h2>
             <p class="section-subtitle">Languages and Frameworks:</p>
             <ul class="skills-list">
-                <li class="skills-item hidden">Java (Including JUnit)</li>
-                <li class="skills-item hidden">Python</li>
-                <li class="skills-item hidden">C</li>
-                <li class="skills-item hidden">HTML/CSS/JavaScript</li>
-                <li class="skills-item hidden">SQL</li>
+                <div class="skill-container"><li class="skills-item hidden">Java (Including JUnit)</li></div>
+                <div class="skill-container"><li class="skills-item hidden">Python</li></div>
+                <div class="skill-container"><li class="skills-item hidden">C</li></div>
+                <div class="skill-container"><li class="skills-item hidden">HTML CSS JavaScript</li></div>
+                <div class="skill-container"><li class="skills-item hidden">SQL</li></div>
             </ul>
             <p class="section-subtitle">Other skills:</p>
             <ul class="skills-list">
-                <li class="skills-item hidden">Git</li>
-                <li class="skills-item hidden">Linux</li>
+                <div class="skill-container"><li class="skills-item hidden">Git</li></div>
+                <div class="skill-container"><li class="skills-item hidden">Linux</li></div>
             </ul>
         </section>
 
