fix sizing for skill boxes on mobile again

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
             <h2 class="section-title">Technical Skills</h2>
             <p class="section-subtitle">Languages and Frameworks:</p>
             <ul class="skills-list">
-                <div class="skill-container"><li class="skills-item hidden">Java (Including JUnit)</li></div>
-                <div class="skill-container"><li class="skills-item hidden">Python</li></div>
-                <div class="skill-container"><li class="skills-item hidden">C</li></div>
-                <div class="skill-container"><li class="skills-item hidden">HTML CSS JavaScript</li></div>
-                <div class="skill-container"><li class="skills-item hidden">SQL</li></div>
+                <div class="skill-container hidden"><li class="skills-item ">Java (Including JUnit)</li></div>
+                <div class="skill-container hidden"><li class="skills-item ">Python</li></div>
+                <div class="skill-container hidden"><li class="skills-item ">C</li></div>
+                <div class="skill-container hidden"><li class="skills-item ">HTML CSS JavaScript</li></div>
+                <div class="skill-container hidden"><li class="skills-item ">SQL</li></div>
             </ul>
             <p class="section-subtitle">Other skills:</p>
             <ul class="skills-list">
