fix sizing for introduction on mobile

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a class="navlink cv" href="CV-Joseph-Heyes.pdf">View my CV</a>
             <a class="navlink" href="#about">About Me</a>
             <a class="navlink" href="#skills">Technical Skills</a>
-            <a class="navlink" href="#projects">My projects</a>
+            <a class="navlink" href="#projects">My Projects</a>
         </div>
 
         <div class="content">
