add new buttons for scrolling menu on mobile

--- a/index.html
+++ b/index.html
@@ -55,8 +55,11 @@
 
         <!-- Projects -->
         <section class="projects hidden" id="projects">
+
             <div class="slider">
+
                 <div class="slides">
+                 
                     <input type="radio" name="radio-btn" id="radio1">
                     <input type="radio" name="radio-btn" id="radio2">
                     <input type="radio" name="radio-btn" id="radio3">
@@ -95,6 +98,11 @@
                     <label for="radio2" class="manual-btn"></label>
                     <label for="radio3" class="manual-btn"></label>
                 </div>
+            </div>
+
+            <div class="arrow-wrapper">
+                <button class="arrow left">&#8678;</button>
+                <button class="arrow right">&#8680;</button>
             </div>
         </section>
 
