--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
 
         <div class="navbar">
-            <a class="navlink cv" href="CV-Joseph-Heyes.pdf">View my CV</a>
+            <a class="navlink cv" href="JosephHeyes-CV.pdf">View my CV</a>
             <a class="navlink" href="#projects">My Projects</a>
             <a class="navlink" href="#skills">Technical Skills</a>
             <a class="navlink" href="#about">About Me</a>
