bug: Fix issue with skills in wrong order when viewed on mobile

--- a/index.html
+++ b/index.html
@@ -40,12 +40,18 @@
             <h2 class="section-title">Technical Skills</h2>
             <p class="section-subtitle">Languages and Frameworks:</p>
             <div class="skills-wrap">
-                <div class="skill-container hidden">SQL</div>
-                <div class="skill-container hidden">HTML CSS JavaScript</div>
-                <div class="skill-container hidden">C</div>
-                <div class="skill-container hidden">Python</div>
                 <div class="skill-container hidden">Java + JUnit</div>
+                <div class="skill-container hidden">C</div>
+                <div class="skill-container hidden">HTML CSS JavaScript</div>
+                <div class="skill-container hidden">Python</div>
+                <div class="skill-container hidden">SQL</div>
             </div>
+
+            <p class="section-subtitle">Currently learning:</p>
+            <div class="skills-wrap">
+                <div class="skill-container hidden">Flutter</div>
+            </div>
+
             <p class="section-subtitle">Other skills:</p>
             <div class="skills-wrap">
                 <div class="skill-container hidden">Git</div>
@@ -81,8 +87,8 @@
                         <img src="assets/minimax.png">
                     </div>
                     <div class="slide">
-                        <div class="slide content">
-                            Under Construction
+                        <div class="slide-content">
+                            
                         </div>
                     </div>
 
@@ -94,9 +100,9 @@
                 </div>
 
                 <div class="nav-manual">
-                    <label for="radio1" class="manual-btn"></label>
-                    <label for="radio2" class="manual-btn"></label>
-                    <label for="radio3" class="manual-btn"></label>
+                    <label id = "label1" for="radio1" class="manual-btn"></label>
+                    <label id = "label2" for="radio2" class="manual-btn"></label>
+                    <label id = "label3" for="radio3" class="manual-btn"></label>
                 </div>
             </div>
 
