update currently learning section

--- a/index.html
+++ b/index.html
@@ -40,16 +40,17 @@
             <h2 class="section-title">Technical Skills</h2>
             <p class="section-subtitle">Languages and Frameworks:</p>
             <div class="skills-wrap">
-                <div class="skill-container hidden">Java + JUnit</div>
+                <div class="skill-container hidden">Java + JUnit ☕</div>
                 <div class="skill-container hidden">C</div>
                 <div class="skill-container hidden">HTML CSS JavaScript</div>
-                <div class="skill-container hidden">Python</div>
+                <div class="skill-container hidden">Python 🐍</div>
                 <div class="skill-container hidden">SQL</div>
             </div>
 
             <p class="section-subtitle">Currently learning:</p>
             <div class="skills-wrap">
                 <div class="skill-container hidden">Flutter</div>
+                <div class="skill-container hidden">Rust 🦀</div>
             </div>
 
             <p class="section-subtitle">Other skills:</p>
