change some wording

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Technical Skills-->
         <section class="skills hidden" id="skills">
             <h2 class="section-title">Technical Skills</h2>
-            <p class="section-subtitle">Languages and Frameworks:</p>
+            <p class="section-subtitle">Languages / Frameworks:</p>
             <div class="skills-wrap">
                 <div class="skill-container hidden">Java + JUnit ☕</div>
                 <div class="skill-container hidden">C</div>
