add link to Planito and fix project text background

--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
                     </div>
                     <div class="slide">
                         <div class="slide-content">
-                            
+                            Planito
+                            <p>In order to teach myself the cross platform app development Flutter, I am currently working on
+                               a to-do list app called <a class="repo-link" href="https://github.com/josephheyes/todo-app">Planito</a>
+                            </p>
                         </div>
                     </div>
 
