add image for Planito

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                                a to-do list app called <a class="repo-link" href="https://github.com/josephheyes/todo-app">Planito</a>
                             </p>
                         </div>
+                        <img src="assets/todo_edited.png">
                     </div>
 
                     <div class="nav-auto">
