--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h2 class="section-title">Technical Skills</h2>
             <p class="section-subtitle">Languages / Frameworks:</p>
             <div class="skills-wrap">
-                <div class="skill-container hidden">Java + JUnit ☕</div>
+                <div class="skill-container hidden">Java ☕</div>
                 <div class="skill-container hidden">C</div>
                 <div class="skill-container hidden">HTML CSS JavaScript</div>
                 <div class="skill-container hidden">Python 🐍</div>
@@ -70,6 +70,7 @@
                     <input type="radio" name="radio-btn" id="radio1">
                     <input type="radio" name="radio-btn" id="radio2">
                     <input type="radio" name="radio-btn" id="radio3">
+                    <input type="radio" name="radio-btn" id="radio4">
 
                     <div class="slide first">
                         <div class="slide-content">
@@ -96,11 +97,19 @@
                         </div>
                         <img src="assets/todo_edited.png">
                     </div>
+                    <div class="slide">
+                        <div class="slide-content">
+                            Timetable in terminal
+                            <p>A <a class="repo-link" href="https://github.com/josephheyes/rust-cal">small project</a> built in Rust to display my university timetable in the terminal
+                            </p>
+                        </div>
+                    </div>
 
                     <div class="nav-auto">
                         <div class="auto-btn1"></div>
                         <div class="auto-btn2"></div>
                         <div class="auto-btn3"></div>
+                        <div class="auto-btn4"></div>
                     </div>
                 </div>
 
@@ -108,6 +117,7 @@
                     <label id = "label1" for="radio1" class="manual-btn"></label>
                     <label id = "label2" for="radio2" class="manual-btn"></label>
                     <label id = "label3" for="radio3" class="manual-btn"></label>
+                    <label id = "label4" for="radio4" class="manual-btn"></label>
                 </div>
             </div>
 
