penguin color change

--- a/penguin.html
+++ b/penguin.html
@@ -15,9 +15,9 @@
 
     </head>
 
-    <body>
-        <div style="display:flex; align-items: center;">
-            <pre>
+    <body style="background-color: black;">
+        <div style="display:flex; align-items: center; color: rgb(56, 139, 67);">
+            <pre >
                 
                 ________o8A888888o_
                 _o888888888888K_]888888o
