Add: contributors page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a class="navlink" href="#projects">My Projects</a>
             <a class="navlink" href="#skills">Technical Skills</a>
             <a class="navlink" href="#about">About Me</a>
+            <a class="navlink" href="#contributors">Contributors</a>
         </div>
 
         <div class="content">
@@ -125,6 +126,18 @@
                 <button class="arrow left">&#8678;</button>
                 <button class="arrow right">&#8680;</button>
             </div>
+        </section>
+
+        <section class="contributors hidden" id="contributors">
+            <h2 class="section-title">Contributors</h2>
+            <p class="section-subtitle">Thank you to the following people for their contributions to my projects:</p>
+            <div class="contributors-wrap">
+                <div class="contributor-container hidden">
+                    <img class="circle" src="assets/nathan.png">
+                    <p class="contributor-name">Nathan Burgess</p>
+                    <p class="contributor-role">Contributors Page</p>
+                    <pc class ="github-link"><a href="https://github.com/NathanBurgessDev">GitHub</a></p>
+                </div>
         </section>
 
         </div>
