add: centered text and images

--- a/index.html
+++ b/index.html
@@ -134,9 +134,15 @@
             <div class="contributors-wrap">
                 <div class="contributor-container hidden">
                     <img class="circle" src="assets/nathan.png">
-                    <p class="contributor-name">Nathan Burgess</p>
-                    <p class="contributor-role">Contributors Page</p>
-                    <pc class ="github-link"><a href="https://github.com/NathanBurgessDev">GitHub</a></p>
+                    <p class="contributor-name"><center>Nathan Burgess</center></p>
+                    <p class="contributor-role"><center>Contributors Page</center></p>
+                    <pc class ="github-link"><center><a href="https://github.com/NathanBurgessDev">GitHub</a></center></p>
+                </div>
+                <div class = "contributor-container hidden">
+                    <img class="circle" src="assets/eva.png">
+                    <p class="contributor-name"><center>Eva Davis</center></p>
+                    <p class="contributor-role"><center>Centering text and images on Contributors Page</center></p>
+                    <pc class ="github-link"><center><a href="https://github.com/EvaDavis">GitHub</a></center></p>
                 </div>
         </section>
 
