--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
                     <p class="contributor-role"><center>Centering text and images on Contributors Page</center></p>
                     <pc class ="github-link"><center><a href="https://github.com/EvaDavis">GitHub</a></center></p>
                 </div>
+                <div class = "contributor-container hidden">
+                    <img class="circle" src="assets/joe.png">
+                    <p class="contributor-name"><center>Xx_hackerman_xX</center></p>
+                    <p class="contributor-role"><center>Joe</center></p>
+                    <pc class ="github-link"><center><a href="https://github.com/josephheyes">GitHub</a></center></p>
+                </div>
         </section>
 
         </div>
